src/org/diabeteman/rst4eclipse/core/parser/grammar/RstParser.java
// $ANTLR 3.0.1 D:\\dev\\rst4eclipse\\src\\org\\diabeteman\\rst4eclipse\\core\\parser\\grammar\\Rst.g 2011-05-27 16:44:09

package org.diabeteman.rst4eclipse.core.parser.grammar;

import java.util.ArrayList;
import java.util.Iterator;
import java.util.List;

import org.eclipse.dltk.ast.DLTKToken;
import org.eclipse.dltk.ast.declarations.Decorator;
import org.eclipse.dltk.ast.declarations.MethodDeclaration;
import org.eclipse.dltk.ast.declarations.ModuleDeclaration;
import org.eclipse.dltk.ast.expressions.Expression;
import org.eclipse.dltk.ast.expressions.ExpressionList;
import org.eclipse.dltk.ast.expressions.NumericLiteral;
import org.eclipse.dltk.ast.expressions.StringLiteral;
import org.eclipse.dltk.ast.references.VariableReference;
import org.eclipse.dltk.ast.statements.Block;
import org.eclipse.dltk.ast.statements.Statement;
import org.eclipse.dltk.compiler.problem.IProblemReporter;

import org.diabeteman.rst4eclipse.core.parser.DLTKRstErrorReporter;
import org.diabeteman.rst4eclipse.core.parser.DLTKRstTokenConverter;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

public class RstParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "INDENT", "DEDENT", "TEXT", "NEWLINE", "SPECIAL_CHAR", "BLANK_LINE", "WS", "IDENTIFIER", "DOUBLE_BACKTICK", "DOUBLE_STAR", "STAR", "BACKTICK", "LEADING_WS", "'.. '", "'::'", "':'", "'..'"
    };
    public static final int BACKTICK=15;
    public static final int STAR=14;
    public static final int WS=10;
    public static final int NEWLINE=7;
    public static final int IDENTIFIER=11;
    public static final int SPECIAL_CHAR=8;
    public static final int DEDENT=5;
    public static final int BLANK_LINE=9;
    public static final int TEXT=6;
    public static final int EOF=-1;
    public static final int DOUBLE_BACKTICK=12;
    public static final int INDENT=4;
    public static final int LEADING_WS=16;
    public static final int DOUBLE_STAR=13;

        public RstParser(TokenStream input) {
            super(input);
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return tokenNames; }
    public String getGrammarFileName() { return "D:\\dev\\rst4eclipse\\src\\org\\diabeteman\\rst4eclipse\\core\\parser\\grammar\\Rst.g"; }

    
    public DLTKRstErrorReporter reporter;
      
    public ModuleDeclaration decl;
      
    public int length;
    public DLTKRstTokenConverter converter;
    DLTKToken toDLTK(Token token) {
      return converter.convert(token);
    }
    public void emitErrorMessage(String msg) {
      reporter.reportMessage(msg);
    }
    public void reportError(RecognitionException e) {
      if( reporter != null ) {
        reporter.reportError(e);
      }
    }
    public void setStartEndForEmbracedExpr(Expression exp, Token lb, Token rb)
    {
      exp.setStart(toDLTK(lb).getColumn());
      exp.setEnd(toDLTK(rb).getColumn()+1);
    }


    public static class document_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start document
    // D:\\dev\\rst4eclipse\\src\\org\\diabeteman\\rst4eclipse\\core\\parser\\grammar\\Rst.g:81:1: document : ( section )+ EOF ;
    public final document_return document() throws RecognitionException {
        document_return retval = new document_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token EOF2=null;
        section_return section1 = null;


        Object EOF2_tree=null;

        try {
            // D:\\dev\\rst4eclipse\\src\\org\\diabeteman\\rst4eclipse\\core\\parser\\grammar\\Rst.g:82:3: ( ( section )+ EOF )
            // D:\\dev\\rst4eclipse\\src\\org\\diabeteman\\rst4eclipse\\core\\parser\\grammar\\Rst.g:82:5: ( section )+ EOF
            {
            root_0 = (Object)adaptor.nil();

            // D:\\dev\\rst4eclipse\\src\\org\\diabeteman\\rst4eclipse\\core\\parser\\grammar\\Rst.g:82:5: ( section )+
            int cnt1=0;
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==TEXT) && (startPos==0)) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // D:\\dev\\rst4eclipse\\src\\org\\diabeteman\\rst4eclipse\\core\\parser\\grammar\\Rst.g:82:5: section
            	    {
            	    pushFollow(FOLLOW_section_in_document90);
            	    section1=section();
            	    _fsp--;

            	    adaptor.addChild(root_0, section1.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        throw eee;
                }
                cnt1++;
            } while (true);

            EOF2=(Token)input.LT(1);
            match(input,EOF,FOLLOW_EOF_in_document93); 
            EOF2_tree = (Object)adaptor.create(EOF2);
            adaptor.addChild(root_0, EOF2_tree);


            }

            retval.stop = input.LT(-1);

                retval.tree = (Object)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        
        catch (RecognitionException re) {
          if( reporter != null ) {
            reporter.reportError(re);
          }
          recover(input,re);
        }
        catch (Throwable extre) {
          //System.err.println(t);
          if( reporter != null ) {
            reporter.reportThrowable(extre);
          }
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end document

    public static class section_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start section
    // D:\\dev\\rst4eclipse\\src\\org\\diabeteman\\rst4eclipse\\core\\parser\\grammar\\Rst.g:85:1: section : section_title section_content ;
    public final section_return section() throws RecognitionException {
        section_return retval = new section_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        section_title_return section_title3 = null;

        section_content_return section_content4 = null;



        try {
            // D:\\dev\\rst4eclipse\\src\\org\\diabeteman\\rst4eclipse\\core\\parser\\grammar\\Rst.g:86:3: ( section_title section_content )
            // D:\\dev\\rst4eclipse\\src\\org\\diabeteman\\rst4eclipse\\core\\parser\\grammar\\Rst.g:86:5: section_title section_content
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_section_title_in_section106);
            section_title3=section_title();
            _fsp--;

            adaptor.addChild(root_0, section_title3.getTree());
            pushFollow(FOLLOW_section_content_in_section108);
            section_content4=section_content();
            _fsp--;

            adaptor.addChild(root_0, section_content4.getTree());

            }

            retval.stop = input.LT(-1);

                retval.tree = (Object)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        
        catch (RecognitionException re) {
          if( reporter != null ) {
            reporter.reportError(re);
          }
          recover(input,re);
        }
        catch (Throwable extre) {
          //System.err.println(t);
          if( reporter != null ) {
            reporter.reportThrowable(extre);
          }
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end section

    public static class section_title_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start section_title
    // D:\\dev\\rst4eclipse\\src\\org\\diabeteman\\rst4eclipse\\core\\parser\\grammar\\Rst.g:89:1: section_title : {...}? => TEXT NEWLINE ( SPECIAL_CHAR )+ NEWLINE ;
    public final section_title_return section_title() throws RecognitionException {
        section_title_return retval = new section_title_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token TEXT5=null;
        Token NEWLINE6=null;
        Token SPECIAL_CHAR7=null;
        Token NEWLINE8=null;

        Object TEXT5_tree=null;
        Object NEWLINE6_tree=null;
        Object SPECIAL_CHAR7_tree=null;
        Object NEWLINE8_tree=null;

        try {
            // D:\\dev\\rst4eclipse\\src\\org\\diabeteman\\rst4eclipse\\core\\parser\\grammar\\Rst.g:90:3: ({...}? => TEXT NEWLINE ( SPECIAL_CHAR )+ NEWLINE )
            // D:\\dev\\rst4eclipse\\src\\org\\diabeteman\\rst4eclipse\\core\\parser\\grammar\\Rst.g:90:5: {...}? => TEXT NEWLINE ( SPECIAL_CHAR )+ NEWLINE
            {
            root_0 = (Object)adaptor.nil();

            if ( !(startPos==0) ) {
                throw new FailedPredicateException(input, "section_title", "startPos==0");
            }
            TEXT5=(Token)input.LT(1);
            match(input,TEXT,FOLLOW_TEXT_in_section_title125); 
            TEXT5_tree = (Object)adaptor.create(TEXT5);
            adaptor.addChild(root_0, TEXT5_tree);

            NEWLINE6=(Token)input.LT(1);
            match(input,NEWLINE,FOLLOW_NEWLINE_in_section_title127); 
            NEWLINE6_tree = (Object)adaptor.create(NEWLINE6);
            adaptor.addChild(root_0, NEWLINE6_tree);

            // D:\\dev\\rst4eclipse\\src\\org\\diabeteman\\rst4eclipse\\core\\parser\\grammar\\Rst.g:90:36: ( SPECIAL_CHAR )+
            int cnt2=0;
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==SPECIAL_CHAR) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // D:\\dev\\rst4eclipse\\src\\org\\diabeteman\\rst4eclipse\\core\\parser\\grammar\\Rst.g:90:36: SPECIAL_CHAR
            	    {
            	    SPECIAL_CHAR7=(Token)input.LT(1);
            	    match(input,SPECIAL_CHAR,FOLLOW_SPECIAL_CHAR_in_section_title129); 
            	    SPECIAL_CHAR7_tree = (Object)adaptor.create(SPECIAL_CHAR7);
            	    adaptor.addChild(root_0, SPECIAL_CHAR7_tree);


            	    }
            	    break;

            	default :
            	    if ( cnt2 >= 1 ) break loop2;
                        EarlyExitException eee =
                            new EarlyExitException(2, input);
                        throw eee;
                }
                cnt2++;
            } while (true);

            NEWLINE8=(Token)input.LT(1);
            match(input,NEWLINE,FOLLOW_NEWLINE_in_section_title132); 
            NEWLINE8_tree = (Object)adaptor.create(NEWLINE8);
            adaptor.addChild(root_0, NEWLINE8_tree);


            }

            retval.stop = input.LT(-1);

                retval.tree = (Object)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        
        catch (RecognitionException re) {
          if( reporter != null ) {
            reporter.reportError(re);
          }
          recover(input,re);
        }
        catch (Throwable extre) {
          //System.err.println(t);
          if( reporter != null ) {
            reporter.reportThrowable(extre);
          }
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end section_title

    public static class section_content_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start section_content
    // D:\\dev\\rst4eclipse\\src\\org\\diabeteman\\rst4eclipse\\core\\parser\\grammar\\Rst.g:93:1: section_content : ( section | body_element | transistion )* ;
    public final section_content_return section_content() throws RecognitionException {
        section_content_return retval = new section_content_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        section_return section9 = null;

        body_element_return body_element10 = null;

        transistion_return transistion11 = null;



        try {
            // D:\\dev\\rst4eclipse\\src\\org\\diabeteman\\rst4eclipse\\core\\parser\\grammar\\Rst.g:94:3: ( ( section | body_element | transistion )* )
            // D:\\dev\\rst4eclipse\\src\\org\\diabeteman\\rst4eclipse\\core\\parser\\grammar\\Rst.g:94:5: ( section | body_element | transistion )*
            {
            root_0 = (Object)adaptor.nil();

            // D:\\dev\\rst4eclipse\\src\\org\\diabeteman\\rst4eclipse\\core\\parser\\grammar\\Rst.g:94:5: ( section | body_element | transistion )*
            loop3:
            do {
                int alt3=4;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==TEXT) && (startPos==0)) {
                    int LA3_2 = input.LA(2);

                    if ( (startPos==0) ) {
                        alt3=1;
                    }


                }
                else if ( (LA3_0==17) ) {
                    alt3=2;
                }
                else if ( (LA3_0==BLANK_LINE) ) {
                    alt3=3;
                }


                switch (alt3) {
            	case 1 :
            	    // D:\\dev\\rst4eclipse\\src\\org\\diabeteman\\rst4eclipse\\core\\parser\\grammar\\Rst.g:94:6: section
            	    {
            	    pushFollow(FOLLOW_section_in_section_content148);
            	    section9=section();
            	    _fsp--;

            	    adaptor.addChild(root_0, section9.getTree());

            	    }
            	    break;
            	case 2 :
            	    // D:\\dev\\rst4eclipse\\src\\org\\diabeteman\\rst4eclipse\\core\\parser\\grammar\\Rst.g:94:16: body_element
            	    {
            	    pushFollow(FOLLOW_body_element_in_section_content152);
            	    body_element10=body_element();
            	    _fsp--;

            	    adaptor.addChild(root_0, body_element10.getTree());

            	    }
            	    break;
            	case 3 :
            	    // D:\\dev\\rst4eclipse\\src\\org\\diabeteman\\rst4eclipse\\core\\parser\\grammar\\Rst.g:94:31: transistion
            	    {
            	    pushFollow(FOLLOW_transistion_in_section_content156);
            	    transistion11=transistion();
            	    _fsp--;

            	    adaptor.addChild(root_0, transistion11.getTree());

            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

                retval.tree = (Object)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        
        catch (RecognitionException re) {
          if( reporter != null ) {
            reporter.reportError(re);
          }
          recover(input,re);
        }
        catch (Throwable extre) {
          //System.err.println(t);
          if( reporter != null ) {
            reporter.reportThrowable(extre);
          }
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end section_content

    public static class transistion_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start transistion
    // D:\\dev\\rst4eclipse\\src\\org\\diabeteman\\rst4eclipse\\core\\parser\\grammar\\Rst.g:98:1: transistion : BLANK_LINE SPECIAL_CHAR {...}? ( SPECIAL_CHAR )* BLANK_LINE ;
    public final transistion_return transistion() throws RecognitionException {
        transistion_return retval = new transistion_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token BLANK_LINE12=null;
        Token SPECIAL_CHAR13=null;
        Token SPECIAL_CHAR14=null;
        Token BLANK_LINE15=null;

        Object BLANK_LINE12_tree=null;
        Object SPECIAL_CHAR13_tree=null;
        Object SPECIAL_CHAR14_tree=null;
        Object BLANK_LINE15_tree=null;

        try {
            // D:\\dev\\rst4eclipse\\src\\org\\diabeteman\\rst4eclipse\\core\\parser\\grammar\\Rst.g:99:3: ( BLANK_LINE SPECIAL_CHAR {...}? ( SPECIAL_CHAR )* BLANK_LINE )
            // D:\\dev\\rst4eclipse\\src\\org\\diabeteman\\rst4eclipse\\core\\parser\\grammar\\Rst.g:99:5: BLANK_LINE SPECIAL_CHAR {...}? ( SPECIAL_CHAR )* BLANK_LINE
            {
            root_0 = (Object)adaptor.nil();

            BLANK_LINE12=(Token)input.LT(1);
            match(input,BLANK_LINE,FOLLOW_BLANK_LINE_in_transistion172); 
            BLANK_LINE12_tree = (Object)adaptor.create(BLANK_LINE12);
            adaptor.addChild(root_0, BLANK_LINE12_tree);

            SPECIAL_CHAR13=(Token)input.LT(1);
            match(input,SPECIAL_CHAR,FOLLOW_SPECIAL_CHAR_in_transistion174); 
            SPECIAL_CHAR13_tree = (Object)adaptor.create(SPECIAL_CHAR13);
            adaptor.addChild(root_0, SPECIAL_CHAR13_tree);

            if ( !(4) ) {
                throw new FailedPredicateException(input, "transistion", "4");
            }
            // D:\\dev\\rst4eclipse\\src\\org\\diabeteman\\rst4eclipse\\core\\parser\\grammar\\Rst.g:99:33: ( SPECIAL_CHAR )*
            loop4:
            do {
                int alt4=2;
                int LA4_0 = input.LA(1);

                if ( (LA4_0==SPECIAL_CHAR) ) {
                    alt4=1;
                }


                switch (alt4) {
            	case 1 :
            	    // D:\\dev\\rst4eclipse\\src\\org\\diabeteman\\rst4eclipse\\core\\parser\\grammar\\Rst.g:99:33: SPECIAL_CHAR
            	    {
            	    SPECIAL_CHAR14=(Token)input.LT(1);
            	    match(input,SPECIAL_CHAR,FOLLOW_SPECIAL_CHAR_in_transistion177); 
            	    SPECIAL_CHAR14_tree = (Object)adaptor.create(SPECIAL_CHAR14);
            	    adaptor.addChild(root_0, SPECIAL_CHAR14_tree);


            	    }
            	    break;

            	default :
            	    break loop4;
                }
            } while (true);

            BLANK_LINE15=(Token)input.LT(1);
            match(input,BLANK_LINE,FOLLOW_BLANK_LINE_in_transistion180); 
            BLANK_LINE15_tree = (Object)adaptor.create(BLANK_LINE15);
            adaptor.addChild(root_0, BLANK_LINE15_tree);


            }

            retval.stop = input.LT(-1);

                retval.tree = (Object)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        
        catch (RecognitionException re) {
          if( reporter != null ) {
            reporter.reportError(re);
          }
          recover(input,re);
        }
        catch (Throwable extre) {
          //System.err.println(t);
          if( reporter != null ) {
            reporter.reportThrowable(extre);
          }
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end transistion

    public static class body_element_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start body_element
    // D:\\dev\\rst4eclipse\\src\\org\\diabeteman\\rst4eclipse\\core\\parser\\grammar\\Rst.g:102:1: body_element : directive ;
    public final body_element_return body_element() throws RecognitionException {
        body_element_return retval = new body_element_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        directive_return directive16 = null;



        try {
            // D:\\dev\\rst4eclipse\\src\\org\\diabeteman\\rst4eclipse\\core\\parser\\grammar\\Rst.g:103:3: ( directive )
            // D:\\dev\\rst4eclipse\\src\\org\\diabeteman\\rst4eclipse\\core\\parser\\grammar\\Rst.g:103:5: directive
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_directive_in_body_element193);
            directive16=directive();
            _fsp--;

            adaptor.addChild(root_0, directive16.getTree());

            }

            retval.stop = input.LT(-1);

                retval.tree = (Object)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        
        catch (RecognitionException re) {
          if( reporter != null ) {
            reporter.reportError(re);
          }
          recover(input,re);
        }
        catch (Throwable extre) {
          //System.err.println(t);
          if( reporter != null ) {
            reporter.reportThrowable(extre);
          }
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end body_element

    public static class directive_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start directive
    // D:\\dev\\rst4eclipse\\src\\org\\diabeteman\\rst4eclipse\\core\\parser\\grammar\\Rst.g:107:1: directive : directive_marker ( WS )? ( directive_block )? ;
    public final directive_return directive() throws RecognitionException {
        directive_return retval = new directive_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token WS18=null;
        directive_marker_return directive_marker17 = null;

        directive_block_return directive_block19 = null;


        Object WS18_tree=null;

        try {
            // D:\\dev\\rst4eclipse\\src\\org\\diabeteman\\rst4eclipse\\core\\parser\\grammar\\Rst.g:108:3: ( directive_marker ( WS )? ( directive_block )? )
            // D:\\dev\\rst4eclipse\\src\\org\\diabeteman\\rst4eclipse\\core\\parser\\grammar\\Rst.g:108:5: directive_marker ( WS )? ( directive_block )?
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_directive_marker_in_directive207);
            directive_marker17=directive_marker();
            _fsp--;

            adaptor.addChild(root_0, directive_marker17.getTree());
            // D:\\dev\\rst4eclipse\\src\\org\\diabeteman\\rst4eclipse\\core\\parser\\grammar\\Rst.g:108:22: ( WS )?
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==WS) ) {
                alt5=1;
            }
            switch (alt5) {
                case 1 :
                    // D:\\dev\\rst4eclipse\\src\\org\\diabeteman\\rst4eclipse\\core\\parser\\grammar\\Rst.g:108:22: WS
                    {
                    WS18=(Token)input.LT(1);
                    match(input,WS,FOLLOW_WS_in_directive209); 
                    WS18_tree = (Object)adaptor.create(WS18);
                    adaptor.addChild(root_0, WS18_tree);


                    }
                    break;

            }

            // D:\\dev\\rst4eclipse\\src\\org\\diabeteman\\rst4eclipse\\core\\parser\\grammar\\Rst.g:108:26: ( directive_block )?
            int alt6=2;
            int LA6_0 = input.LA(1);

            if ( (LA6_0==NEWLINE) ) {
                alt6=1;
            }
            else if ( (LA6_0==TEXT) ) {
                int LA6_2 = input.LA(2);

                if ( (LA6_2==NEWLINE) ) {
                    int LA6_4 = input.LA(3);

                    if ( (LA6_4==INDENT||LA6_4==BLANK_LINE) ) {
                        alt6=1;
                    }
                }
            }
            switch (alt6) {
                case 1 :
                    // D:\\dev\\rst4eclipse\\src\\org\\diabeteman\\rst4eclipse\\core\\parser\\grammar\\Rst.g:108:26: directive_block
                    {
                    pushFollow(FOLLOW_directive_block_in_directive212);
                    directive_block19=directive_block();
                    _fsp--;

                    adaptor.addChild(root_0, directive_block19.getTree());

                    }
                    break;

            }


            }

            retval.stop = input.LT(-1);

                retval.tree = (Object)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        
        catch (RecognitionException re) {
          if( reporter != null ) {
            reporter.reportError(re);
          }
          recover(input,re);
        }
        catch (Throwable extre) {
          //System.err.println(t);
          if( reporter != null ) {
            reporter.reportThrowable(extre);
          }
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end directive

    public static class directive_marker_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start directive_marker
    // D:\\dev\\rst4eclipse\\src\\org\\diabeteman\\rst4eclipse\\core\\parser\\grammar\\Rst.g:111:1: directive_marker : '.. ' directive_name '::' ;
    public final directive_marker_return directive_marker() throws RecognitionException {
        directive_marker_return retval = new directive_marker_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token string_literal20=null;
        Token string_literal22=null;
        directive_name_return directive_name21 = null;


        Object string_literal20_tree=null;
        Object string_literal22_tree=null;

        try {
            // D:\\dev\\rst4eclipse\\src\\org\\diabeteman\\rst4eclipse\\core\\parser\\grammar\\Rst.g:112:3: ( '.. ' directive_name '::' )
            // D:\\dev\\rst4eclipse\\src\\org\\diabeteman\\rst4eclipse\\core\\parser\\grammar\\Rst.g:112:5: '.. ' directive_name '::'
            {
            root_0 = (Object)adaptor.nil();

            string_literal20=(Token)input.LT(1);
            match(input,17,FOLLOW_17_in_directive_marker226); 
            string_literal20_tree = (Object)adaptor.create(string_literal20);
            adaptor.addChild(root_0, string_literal20_tree);

            pushFollow(FOLLOW_directive_name_in_directive_marker228);
            directive_name21=directive_name();
            _fsp--;

            adaptor.addChild(root_0, directive_name21.getTree());
            string_literal22=(Token)input.LT(1);
            match(input,18,FOLLOW_18_in_directive_marker230); 
            string_literal22_tree = (Object)adaptor.create(string_literal22);
            adaptor.addChild(root_0, string_literal22_tree);


            }

            retval.stop = input.LT(-1);

                retval.tree = (Object)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        
        catch (RecognitionException re) {
          if( reporter != null ) {
            reporter.reportError(re);
          }
          recover(input,re);
        }
        catch (Throwable extre) {
          //System.err.println(t);
          if( reporter != null ) {
            reporter.reportThrowable(extre);
          }
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end directive_marker

    public static class directive_name_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start directive_name
    // D:\\dev\\rst4eclipse\\src\\org\\diabeteman\\rst4eclipse\\core\\parser\\grammar\\Rst.g:115:1: directive_name : IDENTIFIER ;
    public final directive_name_return directive_name() throws RecognitionException {
        directive_name_return retval = new directive_name_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token IDENTIFIER23=null;

        Object IDENTIFIER23_tree=null;

        try {
            // D:\\dev\\rst4eclipse\\src\\org\\diabeteman\\rst4eclipse\\core\\parser\\grammar\\Rst.g:116:3: ( IDENTIFIER )
            // D:\\dev\\rst4eclipse\\src\\org\\diabeteman\\rst4eclipse\\core\\parser\\grammar\\Rst.g:116:5: IDENTIFIER
            {
            root_0 = (Object)adaptor.nil();

            IDENTIFIER23=(Token)input.LT(1);
            match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_directive_name244); 
            IDENTIFIER23_tree = (Object)adaptor.create(IDENTIFIER23);
            adaptor.addChild(root_0, IDENTIFIER23_tree);


            }

            retval.stop = input.LT(-1);
